--- a/index.html
+++ b/index.html
@@ -65,12 +65,13 @@
     <div class="row">
       <div class="col-md-6 g-0 text-center">
         <img src="img/Menu_Utama/Gado-Gado 3.png" style="object-position: 65%;" class="img-rest">
-        <img src="img/5. Ala Carte/Sayur/Sayur Asem.png" class="img-rest" style="margin-top: 50px;">
+        <img src="img/5. Ala Carte/Sayur/Sayur Asem.png" class="img-rest-2">
       </div>
       <div class="col-md-6">
-        <div class="container start-50 mt-5 mt-md-0">
-          <h1 class="heading">Welcome to your life-changing journey </h1>
-          <p class="capt w-75"> Experience the authentic taste of Indonesia's cultural heritage with Warung Hati's
+        <div class="container start-50 mt-3 mt-md-0">
+          <h1 class="welcome text-start">Welcome to your life-changing journey </h1>
+          <p class="capt text-start mt-3 mt-md-0"> Experience the authentic taste of Indonesia's cultural heritage with
+            Warung Hati's
             cuisine. Our menu is crafted with indigenous herbs, spices, and natural ingredients that have been passed
             down from our ancestors. We believe that this wisdom is the key to achieving the balance between humans and
             nature, and is also the secret to prime health and longevity..</p>
@@ -95,10 +96,13 @@
           <div class="carousel-caption top-50 translate-middle-y text-start">
             <div class="animate__animated animate__fadeInLeft">
               <h1 class="display-1 fw-bolder text-capitalize">Gudeg Jogja</h1>
-              <hr class="w-50">
-              <p class="fs-5 w-50">A mix of steamed and raw vegetables, fried tofu, and boiled egg, with creamy
-                sweet-savory cashew dressing. Javanese Island's most popular salad! Every city in Java has its style of
-                this salad but with one similarity: delicious?</p>
+              <div class="desk">
+                <hr>
+                <p class="fs-5">A mix of steamed and raw vegetables, fried tofu, and boiled egg, with creamy
+                  sweet-savory cashew dressing. Javanese Island's most popular salad! Every city in Java has its style
+                  of
+                  this salad but with one similarity: delicious?</p>
+              </div>
             </div>
           </div>
         </div>
@@ -108,9 +112,11 @@
           <div class="carousel-caption top-50 translate-middle-y text-start">
             <div class="animate__animated animate__fadeInLeft">
               <h1 class="display-1 fw-bolder text-capitalize">Jajanan Pasar</h1>
-              <hr class="w-50">
-              <p class="fs-5 w-50">Delight in Jajan Pasar's treasures. Assorted traditional sweets showcase Indonesia's
-                culinary heritage, embodying flavors that enchant generations</p>
+              <div class="desk">
+                <hr>
+                <p class="fs-5">Delight in Jajan Pasar's treasures. Assorted traditional sweets showcase Indonesia's
+                  culinary heritage, embodying flavors that enchant generations</p>
+              </div>
             </div>
           </div>
         </div>
@@ -120,9 +126,11 @@
           <div class="carousel-caption top-50 translate-middle-y text-start">
             <div class="animate__animated animate__fadeInLeft">
               <h1 class="display-1 fw-bolder text-capitalize">Es Cendol</h1>
-              <hr class="w-50">
-              <p class="fs-5 w-50">Layers of joy—pandan rice boba, coconut milk, and palm sugar syrup. An icy indulgence
-                that's sweet, creamy, and utterly refreshing.</p>
+              <div class="desk">
+                <hr>                
+                <p class="fs-5">Layers of joy—pandan rice boba, coconut milk, and palm sugar syrup. An icy indulgence
+                  that's sweet, creamy, and utterly refreshing.</p>
+              </div>
             </div>
           </div>
         </div>
