--- a/mealplans.html
+++ b/mealplans.html
@@ -62,7 +62,7 @@
             <div class="card">
                 <div class="position-relative">
                     <div>
-                        <img class="card-img-top rounded img-plans" src="img/Menu_Utama/Nasi Pecel 2.png" alt="Image">
+                        <img class="card-img rounded img-plans" src="img/Menu_Utama/Nasi Pecel 2.png" alt="Image">
                     </div>
                     <div
                         class="card-body position-absolute top-50 end-0 translate-middle-y text-white plans-block-text-right">
@@ -82,7 +82,7 @@
                             <li class="list-group-item">1 healthy beverage (cold-pressed juice or smoothies)</li>
                             <li class="list-group-item">1.500 calories/day</li>
                         </ul>
-                        <h1><span class="fs-1 heading">Price :</span> Rp600000</h1>
+                        <h1><span class="fs-1 heading">Price :</span> Rp600.000</h1>
                     </div>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                             <li class="list-group-item">1 healthy beverage (cold-pressed juice or smoothies)</li>
                             <li class="list-group-item">1.500 calories/day</li>
                         </ul>
-                        <h1><span class="fs-1 heading">Price :</span> Rp600000</h1>
+                        <h1><span class="fs-1 heading">Price :</span> Rp600.000</h1>
                     </div>
                 </div>
             </div>
@@ -135,7 +135,7 @@
                             <li class="list-group-item">1 healthy beverage (cold-pressed juice or smoothies)</li>
                             <li class="list-group-item">1.200 calories/day</li>
                         </ul>
-                        <h1><span class="fs-1 heading">Price :</span> Rp600000</h1>
+                        <h1><span class="fs-1 heading">Price :</span> Rp600.000</h1>
                     </div>
                 </div>
             </div>
@@ -147,12 +147,14 @@
                     <div
                         class="card-body position-absolute top-50 start-0 translate-middle-y text-white plans-block-text-left">
                         <h1 class="heading">Ibu Suri</h1>
-                        <h5 class="card-text">Every mother is a warrior.<br> They deserve nutrient-dense meals to support
+                        <h5 class="card-text">Every mother is a warrior.<br> They deserve nutrient-dense meals to
+                            support
                             their miraculous phase as women: pregnancy and breastfeeding
                         </h5>
-                        <h5><span class="fs-3 heading">Goal :</span> Nutrition booster, ASI booster, and post-birth care 
+                        <h5><span class="fs-3 heading">Goal :</span> Nutrition booster, ASI booster, and post-birth care
                         </h5>
-                        <h5><span class="fs-3 heading">Menu :</span> Nasi timbel beras merah with Sundanese sayur asem and ungkep chicken
+                        <h5><span class="fs-3 heading">Menu :</span> Nasi timbel beras merah with Sundanese sayur asem
+                            and ungkep chicken
                         </h5>
                         <ul class="list-group my-2 ">
                             <li class="list-group-item">6 days package</li>
@@ -160,7 +162,38 @@
                             <li class="list-group-item">2 healthy beverage (cold-pressed juice or smoothies)</li>
                             <li class="list-group-item">1.600 - 1.800 calories/day</li>
                         </ul>
-                        <h1><span class="fs-1 heading">Price :</span> Rp800000</h1>
+                        <h1><span class="fs-1 heading">Price :</span> Rp800.000</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container mt-2">
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <div class="col-md-7">
+                        <img src="img/Menu_Utama/Nasi Pecel 2.png" class="plan-img rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-5">
+                        <div class="card-body">
+                            <h1 class="heading">Sapu Jagad</h1>
+                            <h5 class="card-text">Selection of healthy meals to support the immune
+                                system and improve
+                                stamina
+                            </h5>
+                            <h5><span class="fs-3 heading">Goal </span>: Immune
+                                booster,
+                                increase energy and stamina</h5>
+                            <h5><span class="fs-3 heading">Menu </span>: Nasi Pecel Kacang Mente with Organic Tempeh
+                                Bacem
+                            </h5>
+                            <ul class="list-group my-2">
+                                <li class="list-group-item">6 days package</li>
+                                <li class="list-group-item">2 healthy main course</li>
+                                <li class="list-group-item">1 healthy beverage (cold-pressed juice or smoothies)</li>
+                                <li class="list-group-item">1.500 calories/day</li>
+                            </ul>
+                            <h1><span class="fs-1 heading">Price :</span> Rp600.000</h1>
+                        </div>
                     </div>
                 </div>
             </div>
