Change Font style

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <!--Hero start-->
   <div class="homehead" style="background-image: url(./img/Front_Page/NasiCampurBali.png);">
     <div class="homehead-overlay d-inline-flex p-2 align-items-center">
-      <div class="container w-75 text-center animate__animated animate__fadeInDown">
+      <div class="container text-center animate__animated animate__fadeInDown">
         <h1 class="text-center">Warung Hati</h1>
         <h5 class="text-center">The Authentic Indonesia’s Heritage Cuisine with Organic and Natural Ingredients</h5>
       </div>
@@ -69,7 +69,7 @@
       </div>
       <div class="col-md-6">
         <div class="container start-50 mt-3 mt-md-0">
-          <h1 class="welcome text-start">Welcome to your life-changing journey </h1>
+          <h1 class="welcome  text-start">Welcome to your life-changing journey </h1>
           <p class="capt text-start mt-3 mt-md-0"> Experience the authentic taste of Indonesia's cultural heritage with
             Warung Hati's
             cuisine. Our menu is crafted with indigenous herbs, spices, and natural ingredients that have been passed
