--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <!--End of Hero-->
 
   <!--Quick About us-->
-  <div class="container my-5 animate__animated animate__fadeInLeft">
+  <div class="container my-5">
     <div class="row">
       <div class="col-md-6 g-0 text-center">
         <img src="img/Menu_Utama/Gado-Gado 3.png" style="object-position: 65%;" class="img-rest">
@@ -89,6 +89,7 @@
           aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active c-item">
@@ -127,9 +128,23 @@
             <div class="animate__animated animate__fadeInLeft">
               <h1 class="display-1 fw-bolder text-capitalize">Es Cendol</h1>
               <div class="desk">
-                <hr>                
+                <hr>
                 <p class="fs-5">Layers of joy—pandan rice boba, coconut milk, and palm sugar syrup. An icy indulgence
                   that's sweet, creamy, and utterly refreshing.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item c-item">
+          <img src="img/Menu_Utama/Nasi Timbel Wide.png" class="d-block w-100 c-img"
+            style="object-position: 50% 90% !important;" alt="Slide 3">
+          <div class="carousel-caption top-50 translate-middle-y text-start">
+            <div class="animate__animated animate__fadeInLeft">
+              <h1 class="display-1 fw-bolder text-capitalize">Nasi Timbel</h1>
+              <div class="desk">
+                <hr>
+                <p class="fs-5">A whole food meal from Sundanese consisting of Sayur Asem, sambal, ungkep kampong
+                  chicken, and organic rice wrapped with banana leaves</p>
               </div>
             </div>
           </div>
@@ -148,8 +163,8 @@
   <!--End of Best Pick-->
   <!--Contact-->
   <div class="container my-5 contact">
-    <h1 class="heading text-center fw-bold"> Contact Us</h1>
-    <h5 class="display-6 text-center fw-lighter">For reservation and information</h5>
+    <h1 class="heading text-center contact-head"> Contact Us</h1>
+    <p class="display-6 text-center fw-lighter">For reservation and information</p>
     <div class="container mt-2 text-center">
       <div class="row mt-3 mb-5">
         <div class="col-md-4 mt-md-0 mt-sm-3">
