--- a/menu.html
+++ b/menu.html
@@ -226,6 +226,15 @@
               </div>
             </div>
           </div>
+          <div class="col">
+            <div class="card food-card">
+              <img src="img/Menu_Utama/Nasi Timbel 2.png" class="card-img-top">
+              <div class="card-body">
+                <h2 class="card-title">Nasi Timbel</h2>
+                <p class="card-text"> A whole food meal from Sundanese consisting of Sayur Asem, sambal, ungkep kampong chicken, and organic rice wrapped with banana leaves.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
