--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
   <!--End of Best Pick-->
   <!--Contact-->
   <div class="container my-5 contact">
-    <h1 class="heading text-center contact-head"> Contact Us</h1>
-    <p class="display-6 text-center fw-lighter">For reservation and information</p>
+    <h1 class="heading text-center contact-head">Get in touch</h1>
+    <p class="display-6 text-center">For reservation and information</p>
     <div class="container mt-2 text-center">
       <div class="row mt-3 mb-5">
         <div class="col-md-4 mt-md-0 mt-sm-3">
