--- a/index.html
+++ b/index.html
@@ -178,29 +178,35 @@
         </div>
       </div>
       <div class="col px-5">
-        <form action="mailto:example@mail.com" method="post" enctype="text/plain">
+        <form action="https://formsubmit.co/e1d916a34bce75cbd48c5cf19e94c0fa" method="post" enctype="text/plain">
           <div class="row">
-
             <div class="col-md-12 form-group">
-              <label for="name" class="col-form-label">Name</label>
+              <label for="name" class="col-form-label">Full Name</label>
               <input type="text" class="form-control" name="name" required id="name">
             </div>
           </div>
           <div class="row">
             <div class="col-md-12 form-group">
-              <label for="email" class="col-form-label">Email</label>
-              <input type="text" class="form-control" name="email" required id="email">
+              <label for="email" class="col-form-label">Your Email</label>
+              <input type="email" class="form-control" name="email" required id="email">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 form-group">
+              <label for="email" class="col-form-label">Subject</label>
+              <input type="text" class="form-control" name="subject" required id="subject">
             </div>
           </div>
           <div class="row">
             <div class="col-md-12 form-group">
               <label for="message" class="col-form-label">Message</label>
-              <textarea class="form-control" name="message" id="message" cols="30" rows="7" required></textarea>
+              <textarea class="form-control" name="Message" id="message" cols="30" rows="7" required></textarea>
             </div>
           </div>
           <div class="row mt-4">
             <div class="col-md-12">
-              <input type="submit" value="Send Message" class="btn btn-primary rounded-0 py-2 px-4">
+              <input type="submit" name="send" value="Send" class="btn btn-primary rounded-0 py-2 px-4">
+              <input type="hidden" name="_next" value="http://localhost/Restaurant-site/">
               <span class="submitting"></span>
             </div>
           </div>
