--- a/index.html
+++ b/index.html
@@ -182,31 +182,31 @@
           <div class="row">
             <div class="col-md-12 form-group">
               <label for="name" class="col-form-label">Full Name</label>
-              <input type="text" class="form-control" name="name" required id="name">
+              <input type="text" class="form-control" name="name" required>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12 form-group">
               <label for="email" class="col-form-label">Your Email</label>
-              <input type="email" class="form-control" name="email" required id="email">
+              <input type="email" class="form-control" name="email" required>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12 form-group">
               <label for="email" class="col-form-label">Subject</label>
-              <input type="text" class="form-control" name="subject" required id="subject">
+              <input type="text" class="form-control" name="subject" required>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12 form-group">
               <label for="message" class="col-form-label">Message</label>
-              <textarea class="form-control" name="Message" id="message" cols="30" rows="7" required></textarea>
+              <textarea class="form-control" name="message" cols="30" rows="7" required></textarea>
             </div>
           </div>
           <div class="row mt-4">
             <div class="col-md-12">
               <input type="submit" name="send" value="Send" class="btn btn-primary rounded-0 py-2 px-4">
-              <input type="hidden" name="_next" value="http://localhost/Restaurant-site/">
+              <!-- <input type="hidden" name="next" value="http://localhost/Restaurant-site/"> -->
               <span class="submitting"></span>
             </div>
           </div>
