--- a/index.html
+++ b/index.html
@@ -163,11 +163,8 @@
       <div class="col">
         <div class="container">
           <h1 class="display-1">Get in touch</h1>
-          <p class="fs-5 text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum aliquid hic
-            cupiditate est.
-            Nisi,
-            sint. Amet odio libero ea adipisci? Expedita ut fugit perspiciatis sequi totam cumque iure laudantium rerum.
-          </p>
+          <p class="fs-5 text-secondary">If you have any questions or would like to get in touch with us, feel free to
+            contact us using the form beside or contact on below. We are ready to assist you with pleasure!</p>
           <div class="container text-md-center">
             <ul>
               <li><i class="bi-map-fill contact-icon"></i> Simo Gunung Barat Tol 3/22D</li>
@@ -178,36 +175,36 @@
         </div>
       </div>
       <div class="col px-5">
-        <form action="https://formsubmit.co/hatujoyi@mailgolem.com" method="post" enctype="text/plain">
+        <form action="https://formsubmit.co/kejapitu@mailgolem.com" method="post">
           <div class="row">
             <div class="col-md-12 form-group">
               <label for="name" class="col-form-label">Full Name</label>
-              <input type="text" class="form-control" name="name" required>
+              <input type="text" class="form-control" name="Name" id="name" required>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12 form-group">
               <label for="email" class="col-form-label">Your Email</label>
-              <input type="email" class="form-control" name="email" required>
+              <input type="email" class="form-control" name="Email" id="email" required>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12 form-group">
               <label for="email" class="col-form-label">Subject</label>
-              <input type="text" class="form-control" name="subject" required>
+              <input type="text" class="form-control" name="_subject" id="subject" required>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12 form-group">
               <label for="message" class="col-form-label">Message</label>
-              <textarea class="form-control" name="message" cols="30" rows="7" required></textarea>
+              <textarea class="form-control" name="message" cols="30" rows="7" id="message" required></textarea>
             </div>
           </div>
           <div class="row mt-4">
             <div class="col-md-12">
-              <input type="submit" name="send" value="Send" class="btn btn-primary rounded-0 py-2 px-4">
+              <input type="submit" value="Send" class="btn btn-success rounded-0 py-2 px-4">
               <!-- <input type="hidden" name="next" value="http://localhost/Restaurant-site/"> -->
-              <span class="submitting"></span>
+              <input type="hidden" name="_captcha" value="false">
             </div>
           </div>
         </form>
