--- a/mealplans.html
+++ b/mealplans.html
@@ -19,16 +19,16 @@
 
 <body>
     <!--Navigation Bar Start-->
-    <nav class="navbar navbar-expand-md fixed-top navbar-scrolled" aria-label="Second navbar example">
+    <nav class="navbar navbar-expand-md navbar-scrolled fixed-top " aria-label="Second navbar example">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <h3>Warung Hati</h3>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
-                aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarsExample02">
+            <a class="btn d-md-none" data-bs-toggle="offcanvas" href="#offcanvasNav" role="button"
+                aria-controls="offcanvasNav">
+                <i class="fa-solid fa-bars" style="color: white;"></i>
+            </a>
+            <div class="d-none d-md-block" id="navbarsExample02">
                 <ul class="navbar-nav me-auto ms-1">
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="index.html">Home</a>
@@ -46,6 +46,38 @@
             </div>
         </div>
     </nav>
+    <!-- Offcanvas -->
+    <div class="offcanvas offcanvas-end" data-bs-backdrop="static" tabindex="-1" id="offcanvasNav"
+        aria-labelledby="offcanvasExampleLabel">
+        <div class="offcanvas-header">
+            <h3 class="offcanvas-title text-white" id="offcanvasRightLabel">Warung Hati</h3>
+            <button type="button" class="btn-close end-100" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div class="nav-canvas">
+                <div class="link-canvas">
+                    <a href="index.html">
+                        <h1>Home</h1>
+                    </a>
+                </div>
+                <div class="link-canvas">
+                    <a href="menu.html">
+                        <h1>Menu</h1>
+                    </a>
+                </div>
+                <div class="link-canvas">
+                    <a href="mealplans.html">
+                        <h1>Meal Plans</h1>
+                    </a>
+                </div>
+                <div class="link-canvas">
+                    <a href="aboutus.html">
+                        <h1>About Us</h1>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
     <!--End of Navbar-->
     <!-- Header -->
     <div class="abouthead" style="background-image: url(./img/Jajanan/Bika\ Ambon.png);">
@@ -80,7 +112,7 @@
                             <h3>Price :</h3>
                         </div>
                         <div class="col">
-                            <h3 class="text-black">Rp300.000</h3>
+                            <h3 class="text-white">Rp300.000</h3>
                         </div>
                     </div>
                 </div>
@@ -88,8 +120,7 @@
             <div class="col">
                 <div class="col">
                     <div class="container text-center card-plan">
-                        <img class="img-plans" style="object-position: 80% 50%;" src="img/Minuman/Es Teler.png">
-                        <!--Replace ketoprak-->
+                        <img class="img-plans" style="object-position: 20% 50%;" src="img/Jajanan/Ketoprak(1).png">
                         <h1 class="my-2 text-center title-plan">Seger Waras</h1>
                         <p class="desk-plan">Specially designed for those who are on their healing journey from certain
                             health conditions
@@ -110,7 +141,7 @@
                                 <h3>Price :</h3>
                             </div>
                             <div class="col">
-                                <h3 class="text-black">Rp600.000</h3>
+                                <h3 class="text-white">Rp600.000</h3>
                             </div>
                         </div>
                     </div>
@@ -144,7 +175,7 @@
                                 <h3>Price :</h3>
                             </div>
                             <div class="col">
-                                <h3 class="text-black">Rp600.000</h3>
+                                <h3 class="text-white">Rp600.000</h3>
                             </div>
                         </div>
                     </div>
@@ -158,7 +189,8 @@
                         <!-- <p class="desk-plan">Every mother is a warrior. They deserve nutrient-dense meals to support
                             their miraculous phase as women: pregnancy and breastfeeding.
                         </p> -->
-                        <p class="desk-plan">The best nutrient-dense plan for supporting pregnant and breastfeeding mother</p>
+                        <p class="desk-plan">The best nutrient-dense tool for support pregnant and breastfeeding mother
+                        </p>
                         <h3>Goal :</h3>
                         <p class="desk-plan">Nutrition booster, ASI booster, and post-birth care </p>
                         <h3>Menu :</h3>
@@ -176,7 +208,7 @@
                                 <h3>Price :</h3>
                             </div>
                             <div class="col">
-                                <h3 class="text-black">Rp300.000</h3>
+                                <h3 class="text-white">Rp300.000</h3>
                             </div>
                         </div>
                     </div>
