--- a/mealplans.html
+++ b/mealplans.html
@@ -152,12 +152,11 @@
                     <div class="container text-center card-plan">
                         <img class="img-plans" style="object-position: 75% 50%;" src="img/Menu_Utama/Gado-Gado 3.png">
                         <h1 class="my-2 text-center title-plan">SingSet</h1>
-                        <!-- <p class="desk-plan">Who says weight loss should be dull and agonizing? Our singset menu will
-                            indulge your tongue and make the body's goals journey fun.<br> (PS: don’t forget to exercise
-                            regularly and sleep well too)
-                        </p> -->
-                        <p class="desk-plan">An delicious plan for weight loss, detoxification, better fullness and
-                            reduce craving for unhealthy food</p>
+                        <p class="desk-plan">Who says weight loss should be dull and agonizing? Our singset menu will
+                            indulge your tongue and make the body's goals journey fun
+                        </p>
+                        <!-- <p class="desk-plan">An delicious plan for weight loss, detoxification, better fullness and
+                            reduce craving for unhealthy food</p> -->
                         <h3>Goal :</h3>
                         <p class="desk-plan">Weight loss, increased fullness, detoxification, and reduced craving for
                             unhealthy food</p>
@@ -186,11 +185,11 @@
                     <div class="container text-center card-plan">
                         <img class="img-plans" style="object-position: 20% 50%;" src="img/Menu_Utama/Nasi Timbel 3.png">
                         <h1 class="my-2 text-center title-plan">Ibu Suri</h1>
-                        <!-- <p class="desk-plan">Every mother is a warrior. They deserve nutrient-dense meals to support
+                        <p class="desk-plan">Every mother is a warrior. They deserve nutrient-dense meals to support
                             their miraculous phase as women: pregnancy and breastfeeding.
-                        </p> -->
-                        <p class="desk-plan">The best nutrient-dense tool for support pregnant and breastfeeding mother
                         </p>
+                        <!-- <p class="desk-plan">The best nutrient-dense tool for support pregnant and breastfeeding mother
+                        </p> -->
                         <h3>Goal :</h3>
                         <p class="desk-plan">Nutrition booster, ASI booster, and post-birth care </p>
                         <h3>Menu :</h3>
@@ -200,15 +199,15 @@
                             <li class="list-group-item">6 days package</li>
                             <li class="list-group-item">2 healthy main course</li>
                             <li class="list-group-item">2 healthy beverage (cold-pressed juice or smoothies)</li>
-                            <li class="list-group-item">1.600 - 1.800 calories/day</li>
                             <li class="list-group-item">2 healthy desserts/appetizers</li>
+                            <li class="list-group-item">1.600 - 1.800 calories/day</li>
                         </ul>
                         <div class="row text-start mt-3">
                             <div class="col">
                                 <h3>Price :</h3>
                             </div>
                             <div class="col">
-                                <h3 class="text-white">Rp300.000</h3>
+                                <h3 class="text-white">Rp800.000</h3>
                             </div>
                         </div>
                     </div>
