--- a/aboutus.html
+++ b/aboutus.html
@@ -9,13 +9,10 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>Home</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <script src="https://kit.fontawesome.com/959a4c3f11.js" crossorigin="anonymous"></script>
+  <title>About Us</title>
 </head>
 
 <body>
@@ -81,31 +78,194 @@
   </div>
   <!--End of Navbar-->
   <!--Hero start-->
-  <div class="abouthead" style="background-image: url(./img/Jajanan/Bika\ Ambon.png);">
+  <div class="abouthead" style="background-image: url(img/Minuman/Es\ Cendol.png);">
     <div class="abouthead-overlay d-inline-flex p-2 align-items-center">
       <div class="container w-75 text-center ">
-        <h1 class="text-center">Tentang</h1>
+        <h1 class="text-center">Story of Warung Hati</h1>
       </div>
     </div>
   </div>
   <!--End of Hero-->
-  <div class="container moreabout my-4">
-    <div class="row">
-      <div class="col">
-        <img
-          src="https://images.unsplash.com/photo-1490578474895-699cd4e2cf59?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1471&q=80"
-          class="img-fluid d-block">
-      </div>
-      <div class="col">
-        <h4 class="heading text-center">Awal Mula</h4>
-        <p class="lh-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse odit veritatis suscipit
-          ducimus corporis
-          deserunt
-          fugiat vel repellat, delectus recusandae, id, itaque beatae animi architecto. Quis perferendis ab repellendus
-          dicta lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, dolor, vero dolores nobis saepe eos
-          molestias </p>
+  <div class="my-5">
+    <div class="container w-75 fs-5">
+      <img class="img-fluid my-3 w-75 mx-auto d-block" src="img/aboutus/Healthy Food Education to Youngsters 3.jpg">
+      <div class="text-center ">
+        <p>At Warung Hati, we're more than a catering service; we're a journey driven by passion and purpose.
+          Our story began in January 2017, when Farid, a passionate health activist in Surabaya, embarked on a mission
+          to
+          bring health and wellness to the heart of our community.</p>
+        <p>
+          Before the birth of Warung Hati, Farid was a co-founder of the Surabaya Sehat Community, a community that aims
+          to promote healthy lifestyles in the city. There, he shared his love for wholesome, healthy foods at the
+          monthly
+          Pasar Sehat, a vibrant monthly farmers market dedicated to promoting healthy and eco-friendly products.
+        </p>
+        <p>
+          Warung Hati emerged as a response to the growing health challenges faced by Indonesia, particularly the rise
+          of
+          non-communicable diseases. Farid believes that food possesses a profound ability to not only transform
+          individual health and well-being but also to improve environmental sustainability and the welfare of our local
+          farmers and community.
+        </p>
       </div>
     </div>
+    <!-- <div class="container-fluid p-0">
+      <div class="row row-cols-md-2 row-cols-1 g-0">
+        <div class="col">
+          <div class="commit-bg"
+            style="background-image: url(./img/aboutus/Collaboration\ with\ Surabaya\ Sehat\ Community\ and\ Its\ Artisans\,\ Farmers\,\ and\ Producers\ 2.jpg); object-position: 50% 20%;">
+            <div class="comit-overlay d-inline-flex p-2 align-items-end">
+              <div class="container">
+                <h1>From Community To Community</h1>
+                <h5>
+                  Collaboration is the secret ingredient in our recipe for success. At Warung Hati, we understand that
+                  thriving in business means working hand-in-hand with communities. We empower underprivileged women by
+                  offering them opportunities and enhancing their skills. When these women earn, they invest in their
+                  children's education, breaking the cycle of poverty and ensuring a brighter future, positioning them
+                  as equal providers for their families.
+                </h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="commit-bg" style="background-image: url(./img/Front_Page/NasiCampurBali.png);">
+            <div class="comit-overlay d-inline-flex p-2 align-items-center">
+              <div class="container text-center">
+                <h1 class="text-center">Warung Hati</h1>
+                <h5 class="text-center">The Authentic Indonesia’s Heritage Cuisine with Organic and Natural Ingredients
+                </h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> -->
+    <!--Best Pick-->
+    <div class="mt-5">
+      <h1 class="text-center my-3">Warung Hati’s Impact Commitment </h1>
+      <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active" aria-current="true"
+            aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+          <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="5" aria-label="Slide 6"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active c-item">
+            <img src="img/aboutus/Farmer's Market.jpg" class="d-block w-100 c-img"
+              style="object-position: 50% 60% !important;" alt="Slide 1">
+            <div class="carousel-caption top-50 translate-middle-y text-start">
+              <div class="animate__animated animate__fadeInLeft">
+                <h1 class="display-1 fw-bolder text-capitalize">Delicious and Healthy Meals with Balanced Proteins</h1>
+                <div class="desk-commit">
+                  <hr>
+                  <p class="fs-5">“Hati” means heart. It means we pour our hearts into every dish we create. Research
+                    confirms that healthy food can uplift mood, and we're dedicated to making healthy synonymous with
+                    delicious. We advocate a diet comprising 85% plant-based and 15% meat protein by meticulously
+                    choosing non-saturated fats and organic protein sources to harmonize well-being and environmental
+                    sustainability.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item c-item">
+            <img
+              src="img/aboutus/Collaboration with Surabaya Sehat Community and Its Artisans, Farmers, and Producers 2.jpg"
+              class="d-block w-100 c-img" style="object-position: 50% 50% !important;" alt="Slide 2">
+            <div class="carousel-caption top-50 translate-middle-y text-start">
+              <div class="animate__animated animate__fadeInLeft">
+                <h1 class="display-1 fw-bolder text-capitalize">From Community To Community</h1>
+                <div class="desk-commit">
+                  <hr>
+                  <p class="fs-5">Collaboration is the secret ingredient in our recipe for success. At Warung Hati, we
+                    understand that thriving in business means working hand-in-hand with communities. We empower
+                    underprivileged women by offering them opportunities and enhancing their skills. When these women
+                    earn, they invest in their children's education, breaking the cycle of poverty and ensuring a
+                    brighter future, positioning them as equal providers for their families</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item c-item">
+            <img src="img/aboutus/Our Partner Organic Farmer From Sidoarjo.jpeg" class="d-block w-100 c-img"
+              alt="Slide 3">
+            <div class="carousel-caption top-50 translate-middle-y text-start">
+              <div class="animate__animated animate__fadeInLeft">
+                <h1 class="display-1 fw-bolder text-capitalize">Empowering Local Producers</h1>
+                <div class="desk-commit">
+                  <hr>
+                  <p class="fs-5">Farm to table. We are proudly using 100% indigenous and natural ingredients from local
+                    nearby farmers and producers across Indonesia. Brown rice from Banyuwangi, vegetables from
+                    Mojokerto, and sea salt from Bali, we bring all the goodness from all around Indonesia’s
+                    archipelago. Organic ingredients are preferred whenever possible
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item c-item">
+            <img src="img/aboutus/Degradable Cup For Takeaway.JPG" class="d-block w-100 c-img"
+              style="object-position: 50% 40% !important;" alt="Slide 4">
+            <div class="carousel-caption top-50 translate-middle-y text-start">
+              <div class="animate__animated animate__fadeInLeft">
+                <h1 class="display-1 fw-bolder text-capitalize">Environmentally Responsible</h1>
+                <div class="desk-commit">
+                  <hr>
+                  <p class="fs-5">Nourishing the body while saving the world is our pledge. We utilize all-natural,
+                    biodegradable products in our operations, from cassava-based takeaway bags to eco-friendly
+                    dishwashing liquid. We also encourage customers to bring their containers</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item c-item">
+            <img src="img/aboutus/Healthy Food Education to Youngsters 1.JPG" class="d-block w-100 c-img"
+              style="object-position: 50% 90% !important;" alt="Slide 5">
+            <div class="carousel-caption top-50 translate-middle-y text-start">
+              <div class="animate__animated animate__fadeInLeft">
+                <h1 class="display-1 fw-bolder text-capitalize">Inclusive Pricing</h1>
+                <div class="desk-commit">
+                  <hr>
+                  <p class="fs-5">We understand the concern about high prices for healthy food. By using local
+                    ingredients, we offer diverse product ranges. Our "Buy 1, Give 1" program every Friday enables
+                    customers to share healthy meals with underprivileged people, ensuring everyone can savor the
+                    goodness of healthy food.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item c-item">
+            <img src="img/aboutus/Seminar about Food and Its Impact.jpg" class="d-block w-100 c-img"
+              style="object-position: 50% 90% !important;" alt="Slide 5">
+            <div class="carousel-caption top-50 translate-middle-y text-start">
+              <div class="animate__animated animate__fadeInLeft">
+                <h1 class="display-1 fw-bolder text-capitalize">Health and Sustainability Education</h1>
+                <div class="desk-commit">
+                  <hr>
+                  <p class="fs-5">The future of our planet rests in the hands of today's and the next generation. We
+                    nurture the value of health and sustainability through engaging educational experiences for them.
+                    From the vibrant farmer's markets to hands-on cooking classes and inspiring campaigns promoting
+                    wholesome local food, we savor knowledge and embrace healthier, more sustainable living.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#hero-carousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#hero-carousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+    <!--End of Best Pick-->
   </div>
   <!--Footer-->
   <footer class="footer pt-3">
@@ -137,5 +297,9 @@
   </footer>
   <!--End of Footer-->
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+  integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
+  integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
 
 </html>
